// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen config import --help] should print import usage: import usage 1`] = `
Object {
  "stderr": "",
  "stdout": "Usage: import [-?] [--auto-confirm] inputFile
[INCUBATION] Import configuration objects.
      inputFile               Input configuration file.
      --auto-confirm          Skip interactive approval before applying.
  -?, -h, --help              Show this help message.
",
}
`;

exports[`[mutagen config import file] should import multiple objects of different types: every object has been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "+ physicalswitch => MultiObjectImportPhysicalSwitch1
+ physicalswitch => MultiObjectImportPhysicalSwitch2
+ switch => Environment/MultiObjectImportSwitch1
+ switch => Environment/MultiObjectImportSwitch2
+ switch => Environment/MultiObjectImportSwitch3
+ dn => number: '123', switch: 'MultiObjectImportSwitch1', type: 'Extension', name: 'MultiObjectImportDN', tenant: 'Environment'
Completed. 6 object(s) imported.
",
}
`;

exports[`[mutagen config import file] should import the objects if the user confirms the changes: changes applied 1`] = `
Object {
  "stderr": "",
  "stdout": "The following changes are going to be applied:
+ CFGPhysicalSwitch => AcceptChangesPhysicalSwitch
  {
    \\"name\\" : \\"AcceptChangesPhysicalSwitch\\",
    \\"state\\" : \\"enabled\\",
    \\"type\\" : \\"fujitsu\\"
  }
+ CFGSwitch => Environment/AcceptChangesSwitch
  {
    \\"dnRange\\" : \\"74233-74244, 74290\\",
    \\"linkType\\" : \\"madgelink\\",
    \\"name\\" : \\"AcceptChangesSwitch\\",
    \\"physicalSwitch\\" : \\"AcceptChangesPhysicalSwitch\\",
    \\"state\\" : \\"enabled\\",
    \\"switchAccessCodes\\" : [ ],
    \\"tenant\\" : \\"Environment\\"
  }
+ CFGDN => number: '123', switch: 'AcceptChangesSwitch', type: 'Extension', name: 'AcceptChangesDN', tenant: 'Environment'
  {
    \\"name\\" : \\"AcceptChangesDN\\",
    \\"number\\" : \\"123\\",
    \\"routeType\\" : \\"default\\",
    \\"state\\" : \\"enabled\\",
    \\"switch\\" : \\"AcceptChangesSwitch\\",
    \\"switchSpecificType\\" : 1,
    \\"tenant\\" : \\"Environment\\",
    \\"trunks\\" : 1,
    \\"type\\" : \\"Extension\\",
    \\"useOverride\\" : true
  }

Please confirm [y|n]: + physicalswitch => AcceptChangesPhysicalSwitch
+ switch => Environment/AcceptChangesSwitch
+ dn => number: '123', switch: 'AcceptChangesSwitch', type: 'Extension', name: 'AcceptChangesDN', tenant: 'Environment'
Completed. 3 object(s) imported.
",
}
`;

exports[`[mutagen config import file] should not import any object if some dependencies cannot be resolved: found missing dependency 1`] = `
Object {
  "stderr": "Cannot find script 'MissingDependencyTenant1/NonExistingScript1' (referenced by tenant 'MissingDependencyTenant1')
Cannot find script 'MissingDependencyTenant2/NonExistingScript2' (referenced by tenant 'MissingDependencyTenant2')
Cannot import configuration: some configuration objects' dependencies could not be found.
",
  "stdout": "",
}
`;

exports[`[mutagen config import file] should not import any object if there's a cycle between object dependencies: cycle detected 1`] = `
Object {
  "stderr": "Cannot import configuration: dependency cycles is not yet supported.
",
  "stdout": "",
}
`;

exports[`[mutagen config import file] should not import the object if it has an invalid tenant: no object has been imported 1`] = `
Object {
  "stderr": "Cannot find tenant 'Invalid tenant' (referenced by switch 'Invalid tenant/switchWithInvalidTenant')
Cannot import configuration: some configuration objects' dependencies could not be found.
",
  "stdout": "",
}
`;

exports[`[mutagen config import file] should not import the objects if the user does not confirm the changes: changes not applied 1`] = `
Object {
  "stderr": "",
  "stdout": "The following changes are going to be applied:
+ CFGPhysicalSwitch => RejectChangesPhysicalSwitch
  {
    \\"name\\" : \\"RejectChangesPhysicalSwitch\\",
    \\"state\\" : \\"enabled\\",
    \\"type\\" : \\"fujitsu\\"
  }
+ CFGSwitch => Environment/RejectChangesSwitch
  {
    \\"dnRange\\" : \\"74233-74244, 74290\\",
    \\"linkType\\" : \\"madgelink\\",
    \\"name\\" : \\"RejectChangesSwitch\\",
    \\"physicalSwitch\\" : \\"RejectChangesPhysicalSwitch\\",
    \\"state\\" : \\"enabled\\",
    \\"switchAccessCodes\\" : [ ],
    \\"tenant\\" : \\"Environment\\"
  }
+ CFGDN => number: '123', switch: 'RejectChangesSwitch', type: 'Extension', name: 'RejectChangesDN', tenant: 'Environment'
  {
    \\"name\\" : \\"RejectChangesDN\\",
    \\"number\\" : \\"123\\",
    \\"routeType\\" : \\"default\\",
    \\"state\\" : \\"enabled\\",
    \\"switch\\" : \\"RejectChangesSwitch\\",
    \\"switchSpecificType\\" : 1,
    \\"tenant\\" : \\"Environment\\",
    \\"trunks\\" : 1,
    \\"type\\" : \\"Extension\\",
    \\"useOverride\\" : true
  }

Please confirm [y|n]: Import cancelled.
",
}
`;

exports[`[mutagen config import file] should only import objects with a unique key: only one object with the key has been imported 1`] = `
Object {
  "stderr": "",
  "stdout": "+ switch => Environment/sameSwitch
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen config import] should fail when file to import does not exist: no such file or directory 1`] = `
Object {
  "stderr": "/tmp/foo (No such file or directory)
",
  "stdout": "",
}
`;
